--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
-<P></P>
++<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <header>
+        <a href="index.html"><span>Web</span>Studio</a>
+        <nav>
+            <ul>
+                <li><a href="#"></a>Студія</li>
+                <li><a href="#">Портфоліо</a></li>
+                <li><a href="#">Контракти</a></li>
+            </ul>
+            <ul>
+                <li><a href="malito:info@devstudio.com">gmail:info@devstudio.com
+                        info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <ul>
+                <li><a href="#">Усі</a></li>
+                <li><a href="#">Веб-сайти</a></li>
+                <li><a href="#">Додатки</a></li>
+                <li><a href="#">Дизайн</a></li>
+                <li><a href="#">Маркетинг</a></li>
+            </ul>
+        </section>
+        <section>
+            <ul>
+                <li><img src="photo/1.jpg" alt="технокряк"></li>
+                <li><img src="photo/2.jpg" alt="Постер New Orlean vs Golden Star"></li>
+                <li><img src="photo/3.jpg" alt="Ресторан Seafood"></li>
+                <li><img src="photo/4.jpg" alt="Проєкт Prime"></li>
+                <li><img src="photo/5.jpg" alt="Проєкт Boxes"></li>
+                <li><img src="photo/6.jpg" alt="Inspiration has no Borders"></li>
+                <li><img src="photo/7.jpg" alt="Видання Limited Edition"></li>
+                <li><img src="photo/8.jpg" alt="Проєкт LAB"></li>
+                <li><img src="photo/9.jpg" alt="Growing Business"></li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <a href="index.html"><span>Web</span>Studio</a>
+            <ul>
+            <li>м. Київ, пр-т Лесі Українки, 26</li>
+            <li><a href="malito:nfo@devstudio.com">nfo@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+    </footer>
+</body>
+
+</html>
+</body>
+</html>
