--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-<!DOCTYPE html>
-<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -58,14 +54,15 @@
     </main>
     <footer>
         <a href="index.html"><span>Web</span>Studio</a>
-            <ul>
+        <ul>
             <li>м. Київ, пр-т Лесі Українки, 26</li>
             <li><a href="malito:nfo@devstudio.com">nfo@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
+        </ul>
     </footer>
 </body>
 
 </html>
 </body>
+
 </html>
